[package]
name = "emacs-audit"
version = "1.0.0-snapshot"
authors = ["Murilo Pereira <murilo@murilopereira.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
chrono = { version = "0.4.11", features = ["serde"] }
futures = "0.3.5"
# Explicit openssl dependency to make cross compilation work.
openssl = { version = "0.10.29", features = ["vendored"] }
regex = "1"
reqwest = { version = "0.10.6", features = ["json"] }
serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0.53"
structopt = "0.3.15"
tokio = { version = "0.2.21", features = ["macros"] }
url = { version = "2.1.1", features = ["serde"] }
anyhow = "1.0.31"

[build-dependencies]
built = { version = "0.4.2", features = ["git2", "chrono", "semver"] }
